insert slash
