# src/swagger.json
@@ -7,7 +7,9 @@
   },
   "host": "animalshelter-wyak.onrender.com",
   "basePath": "/",
-  "schemes": ["https"],
+  "schemes": [
+    "https"
+  ],
   "paths": {
     "/": {
       "get": {
@@ -22,7 +24,9 @@
     "/animals/": {
       "get": {
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -73,7 +77,9 @@
     "/animals/{id}": {
       "get": {
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -157,7 +163,7 @@
         }
       }
     },
-    "api-docs/": {
+    "/api-docs/": {
       "get": {
         "description": "",
         "responses": {
